add http parser implementation for testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,20 @@ version = "0.1.0"
 authors = ["hehaowen00"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.bench]
+codegen-units = 1
+lto = "fat"
+
+[profile.dev]
+codegen-units = 1
+lto = "fat"
+
+[profile.release]
+codegen-units = 1
+lto = "fat"
+
+[profile.test]
+codegen-units = 1
+lto = "fat"
 
 [dependencies]
